added credit and gh repo

--- a/index.html
+++ b/index.html
@@ -17,10 +17,14 @@
     		background-color: hsl(200, 37%, 96%);
 			padding: 0 5px 0 5px;
 		}
+		a:hover {
+			text-decoration: none;	
+		}
 	</style>
 </head>
 <body>
 	<h1>Timestamp Microservice API</h1>
+	<p>Created by Daynil - <a href="https://github.com/Daynil/timestamp-api">Github Repo</a></p>
 	<h4>Append a date to the end of the base URL in either:</h4>
 	<ul>
 		<li>Natural Language format: January 01, 2016</li>
